fix list issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -132,25 +132,6 @@ body{
     color: red;
 }
 
-.hidden-nav-item{
-    margin-bottom: 15px;
-    margin-top: 15px;
-    align-self: center;
-}
-.hidden-nav-item a{
-    text-decoration: none;
-    color: var(--text-color);
-    font-size: var(--font-size-large);
-    font-family: 'Courier New', Courier, monospace;
-}
-.hidden-nav-item a span{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: var(--font-size-small);
-}
-.hidden-nav-item a:hover{
-    color: red;
-}
-
 .hidden-nav-bar{
     position: fixed;
     top: 99px;
@@ -164,6 +145,24 @@ body{
 
 .hidden-nav-bar ul{
     list-style: none;
+}
+
+.hidden-nav-item{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    align-self: center;
+}
+
+.hidden-nav-item a{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: var(--font-size-large);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+
+.hidden-nav-item a:hover{
+    color: red;
 }
 
 .active{
